syntax = "proto3";
option csharp_namespace = "Sistema_de_reserva_bilhetes";
package greet;

service ListarTeatros{
	rpc GetListaTeatros(ListaTeatroVerModelo) returns (stream ListarTeatrosModelo);
	rpc PesquisaListaTeatros(PesquisaListaTeatrosVerModelo) returns (ListarTeatrosModelo);
	rpc GetTeatro(GetTeatroRequest) returns (ListarTeatrosModelo);
}

message PesquisaListaTeatrosVerModelo{
	string teatro = 1;
}

message ListaTeatroVerModelo{

}

message ListarTeatrosModelo{
	string nome = 1;
	string morada_teatro = 2;
	string localizacao_teatro = 3;
	string telemovel = 4;
	string telefone = 5;
	string email = 6;
	int32 id = 7;
}

message GetTeatroRequest {
	int32 id = 1;
}